# MFM-Enterprise

./: .gitignore  CHANGELOG.md  Maritim ForeningsManager Enterprise.docx  README.md  asset_capability_review.md  certificate_capability_review.md  fleet_capability_review.md  inventory_capability_review.md  maintenance_capability_review.md  organization_capability_review.md  procurement_capability_review.md  pyproject.toml  technical_configuration_capability_review.md  voyage_capability_review.md
config/: default.toml  development.toml  exceptions.py  manager.py  production.toml  test.toml  user.toml
docs/architecture/: capability_roadmap.md
docs/design/: asset_core.md  certificates_compliance.md  fleet.md  inventory.md  maintenance.md  organization.md  procurement.md  technical_configuration.md  voyages.md
src/mfm/: __init__.py  __main__.py  application.py  application_context.py  main.py  version.py
tests/architecture/: test_dependency_guard.py  test_feature_api_architecture.py
tests/common/: test_result.py
tests/config/: test_config_manager.py
tests/database/: test_asset_mapper.py  test_asset_persistence.py  test_certificate_mapper.py  test_inventory_mapper.py  test_maintenance_mapper.py  test_organization_mapper.py  test_organization_persistence.py  test_purchase_order_mapper.py  test_sqlite_asset_repository.py  test_sqlite_certificate_repository.py  test_sqlite_contact_repository.py  test_sqlite_contingent_plan_repository.py  test_sqlite_inventory_repository.py  test_sqlite_maintenance_repositories.py  test_sqlite_member_repository.py  (+11 more)
(+424 files in other folders)
