[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mfm-enterprise"
version = "0.3.0-alpha1"
description = "Maritim ForeningsManager Enterprise"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
    { name = "Hans Elker Hansen" }
]

keywords = [
    "maritime",
    "association",
    "erp",
    "museum",
    "heritage",
    "accounting"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
]

dependencies = [
    "PySide6>=6.8",
    "SQLAlchemy>=2.0",
    "alembic>=1.14",
    "pytest>=8.3",
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

pythonpath = [
    "src"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]